@@ -1,24 +1,5 @@
 package de.unipassau.allocationsystem.service;
 
-import java.io.IOException;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.Set;
-import java.util.stream.Collectors;
-
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
-import org.springframework.data.jpa.domain.Specification;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-import org.springframework.web.multipart.MultipartFile;
-
 import de.unipassau.allocationsystem.aspect.Audited;
 import de.unipassau.allocationsystem.constant.AuditEntityNames;
 import de.unipassau.allocationsystem.dto.teacher.BulkImportResponseDto;
@@ -46,25 +27,43 @@ import lombok.AllArgsConstructor;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
+import org.springframework.data.jpa.domain.Specification;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.multipart.MultipartFile;
 
+import java.io.IOException;
+import java.util.*;
+import java.util.function.Function;
+import java.util.stream.Collectors;
+
+/**
+ * Service for managing teacher entities.
+ * <p>
+ * Responsibilities:
+ * <ul>
+ *   <li>CRUD operations for teachers (via DTO-based API)</li>
+ *   <li>Employment status updates</li>
+ *   <li>Bulk import from Excel with validation, batching, and detailed per-row results</li>
+ * </ul>
+ */
 @Service
 @RequiredArgsConstructor
 @Slf4j
 @Transactional
-/**
- * Service for managing teacher entities.
- * Handles CRUD operations, bulk imports, and employment status management.
- */
 public class TeacherService implements CrudService<TeacherResponseDto, Long> {
 
     private final SubjectRepository subjectRepository;
-
     private final TeacherRepository teacherRepository;
     private final SchoolRepository schoolRepository;
     private final TeacherMapper teacherMapper;
 
     /**
-     * Helper class to pair Teacher with its row number for batch processing
+     * Helper class to pair a Teacher entity with its original Excel row number.
      */
     @Getter
     @AllArgsConstructor
@@ -73,22 +72,26 @@ public class TeacherService implements CrudService<TeacherResponseDto, Long> {
         private final int rowNumber;
     }
 
-    // Helper method to load subjects 
+    /**
+     * Resolves subject IDs into Subject entities.
+     * <ul>
+     *   <li>If subjectIds is null/empty: returns empty set</li>
+     *   <li>If any subject ID does not exist: throws {@link ResourceNotFoundException}</li>
+     * </ul>
+     *
+     * @param subjectIds list of subject IDs (nullable)
+     * @return set of resolved subjects (never null)
+     */
     private Set<Subject> resolveSubjects(List<Long> subjectIds) {
-        //if frontend sends nothing - no subjects 
         if (subjectIds == null || subjectIds.isEmpty()) {
             return Set.of();
         }
-        //load subjects from DB using IDs
         Set<Subject> subjects = new HashSet<>(subjectRepository.findAllById(subjectIds));
-        //if some ids do not exist - throw an error 
         if (subjects.size() != subjectIds.size()) {
             throw new ResourceNotFoundException("One or more subjects not found");
         }
-        //return subject objects 
         return subjects;
     }
-
 
     @Override
     public List<Map<String, String>> getSortFields() {
@@ -96,8 +99,8 @@ public class TeacherService implements CrudService<TeacherResponseDto, Long> {
     }
 
     /**
-     * Returns the list of sortable field keys.
-     * 
+     * Returns the list of sortable field keys exposed by {@link #getSortFields()}.
+     *
      * @return list of field keys
      */
     public List<String> getSortFieldKeys() {
@@ -109,6 +112,15 @@ public class TeacherService implements CrudService<TeacherResponseDto, Long> {
         return teacherRepository.existsById(id);
     }
 
+    /**
+     * Returns a paginated and filtered list of teachers.
+     * Supports:
+     * <ul>
+     *   <li>search (firstName, lastName, email)</li>
+     *   <li>schoolId filter</li>
+     *   <li>employmentStatus filter</li>
+     * </ul>
+     */
     @Audited(
             action = AuditLog.AuditAction.VIEW,
             entityName = AuditEntityNames.TEACHER,
@@ -123,49 +135,73 @@ public class TeacherService implements CrudService<TeacherResponseDto, Long> {
         Pageable pageable = PageRequest.of(params.page() - 1, params.pageSize(), sort);
 
         Specification<Teacher> spec = buildFilterSpecification(queryParams, searchValue);
-
         Page<Teacher> page = teacherRepository.findAll(spec, pageable);
         return PaginationUtils.formatPaginationResponse(page);
     }
 
+    /**
+     * Builds the Specification used for filtering and searching teachers.
+     */
     private Specification<Teacher> buildFilterSpecification(Map<String, String> queryParams, String searchValue) {
         return (root, query, cb) -> {
             List<Predicate> predicates = new ArrayList<>();
 
-            // Search filter using utility
-            Specification<Teacher> searchSpec = SearchSpecificationUtils.buildMultiFieldLikeSpecification(
-                new String[]{"firstName", "lastName", "email"}, searchValue
-            );
             if (searchValue != null && !searchValue.trim().isEmpty()) {
+                Specification<Teacher> searchSpec = SearchSpecificationUtils.buildMultiFieldLikeSpecification(
+                        new String[]{"firstName", "lastName", "email"}, searchValue
+                );
                 predicates.add(searchSpec.toPredicate(root, query, cb));
             }
 
-            // School ID filter
-            String schoolIdParam = queryParams.get("schoolId");
-            if (schoolIdParam != null && !schoolIdParam.trim().isEmpty()) {
-                try {
-                    Long schoolId = Long.parseLong(schoolIdParam);
-                    predicates.add(cb.equal(root.get("school").get("id"), schoolId));
-                } catch (NumberFormatException e) {
-                    // Invalid school ID, ignore filter
-                }
-            }
+            parseLong(queryParams.get("schoolId"))
+                    .ifPresent(id -> predicates.add(cb.equal(root.get("school").get("id"), id)));
 
-            // Employment status filter
-            String employmentStatusParam = queryParams.get("employmentStatus");
-            if (employmentStatusParam != null && !employmentStatusParam.trim().isEmpty()) {
-                try {
-                    Teacher.EmploymentStatus employmentStatus = Teacher.EmploymentStatus.valueOf(employmentStatusParam.toUpperCase());
-                    predicates.add(cb.equal(root.get("employmentStatus"), employmentStatus));
-                } catch (IllegalArgumentException e) {
-                    // Invalid employment status, ignore filter
-                }
-            }
+            parseEmploymentStatus(queryParams.get("employmentStatus"))
+                    .ifPresent(s -> predicates.add(cb.equal(root.get("employmentStatus"), s)));
 
             return cb.and(predicates.toArray(new Predicate[0]));
         };
     }
 
+    /**
+     * Parses a Long value from a query parameter.
+     *
+     * @param raw raw query value
+     * @return parsed long if valid, otherwise empty
+     */
+    private Optional<Long> parseLong(String raw) {
+        if (raw == null || raw.trim().isEmpty()) {
+            return Optional.empty();
+        }
+        try {
+            return Optional.of(Long.parseLong(raw.trim()));
+        } catch (NumberFormatException ignored) {
+            return Optional.empty();
+        }
+    }
+
+    /**
+     * Parses an employment status value without throwing/catching IllegalArgumentException.
+     *
+     * @param raw raw query value
+     * @return parsed status if valid, otherwise empty
+     */
+    private Optional<Teacher.EmploymentStatus> parseEmploymentStatus(String raw) {
+        if (raw == null || raw.trim().isEmpty()) {
+            return Optional.empty();
+        }
+        String normalized = raw.trim().toUpperCase();
+        for (Teacher.EmploymentStatus s : Teacher.EmploymentStatus.values()) {
+            if (s.name().equals(normalized)) {
+                return Optional.of(s);
+            }
+        }
+        return Optional.empty();
+    }
+
+    /**
+     * Returns all teachers.
+     */
     @Audited(
             action = AuditLog.AuditAction.VIEW,
             entityName = AuditEntityNames.TEACHER,
@@ -175,11 +211,12 @@ public class TeacherService implements CrudService<TeacherResponseDto, Long> {
     @Transactional(readOnly = true)
     @Override
     public List<TeacherResponseDto> getAll() {
-        return teacherRepository.findAll().stream()
-                .map(teacherMapper::toResponseDto)
-                .toList();
+        return teacherRepository.findAll().stream().map(teacherMapper::toResponseDto).toList();
     }
 
+    /**
+     * Returns a teacher by id.
+     */
     @Audited(
             action = AuditLog.AuditAction.VIEW,
             entityName = AuditEntityNames.TEACHER,
@@ -192,87 +229,82 @@ public class TeacherService implements CrudService<TeacherResponseDto, Long> {
         return teacherRepository.findById(id).map(teacherMapper::toResponseDto);
     }
 
+    /**
+     * Unsupported API method. Use {@link #createTeacher(TeacherCreateDto)}.
+     */
     @Audited(
             action = AuditLog.AuditAction.CREATE,
             entityName = AuditEntityNames.TEACHER,
             description = "Created new teacher",
             captureNewValue = true
     )
-    @Transactional
     @Override
     public TeacherResponseDto create(TeacherResponseDto dto) {
         throw new UnsupportedOperationException("Use createTeacher with TeacherCreateDto");
     }
 
+    /**
+     * Creates a new teacher with subject qualifications.
+     *
+     * @param createDto teacher creation data
+     * @return created teacher response DTO
+     */
     @Audited(
             action = AuditLog.AuditAction.CREATE,
             entityName = AuditEntityNames.TEACHER,
             description = "Created new teacher",
             captureNewValue = true
     )
-    @Transactional
-    /**
-     * Creates a new teacher with subject qualifications.
-     * 
-     * @param createDto teacher creation data
-     * @return created teacher response DTO
-     */
     public TeacherResponseDto createTeacher(TeacherCreateDto createDto) {
         if (teacherRepository.existsByEmail(createDto.getEmail())) {
             throw new DuplicateResourceException("Email already exists: " + createDto.getEmail());
         }
+
         School school = schoolRepository.findById(createDto.getSchoolId())
                 .orElseThrow(() -> new ResourceNotFoundException("School not found with ID: " + createDto.getSchoolId()));
+
         Teacher teacher = teacherMapper.toEntityCreate(createDto);
         teacher.setSchool(school);
-
-        //attach subjects 
         teacher.setSubjects(resolveSubjects(createDto.getSubjectIds()));
 
         Teacher saved = teacherRepository.save(teacher);
-        
         return teacherMapper.toResponseDto(saved);
     }
 
+    /**
+     * Unsupported API method. Use {@link #updateTeacher(Long, TeacherUpdateDto)}.
+     */
     @Audited(
             action = AuditLog.AuditAction.UPDATE,
             entityName = AuditEntityNames.TEACHER,
             description = "Updated teacher",
             captureNewValue = true
     )
-    @Transactional
     @Override
     public TeacherResponseDto update(Long id, TeacherResponseDto dto) {
         throw new UnsupportedOperationException("Use updateTeacher with TeacherUpdateDto");
     }
 
+    /**
+     * Updates an existing teacher's information.
+     *
+     * @param id        the teacher ID
+     * @param updateDto teacher update data
+     * @return updated teacher response DTO
+     */
     @Audited(
             action = AuditLog.AuditAction.UPDATE,
             entityName = AuditEntityNames.TEACHER,
             description = "Updated teacher",
             captureNewValue = true
     )
-    @Transactional
-    /**
-     * Updates an existing teacher's information.
-     * 
-     * @param id the teacher ID
-     * @param updateDto teacher update data
-     * @return updated teacher response DTO
-     */
     public TeacherResponseDto updateTeacher(Long id, TeacherUpdateDto updateDto) {
         Teacher teacher = teacherRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Teacher not found with ID: " + id));
-        if (updateDto.getEmail() != null && !updateDto.getEmail().equals(teacher.getEmail())) {
-            if (teacherRepository.existsByEmailAndIdNot(updateDto.getEmail(), id)) {
-                throw new DuplicateResourceException("Email already exists: " + updateDto.getEmail());
-            }
-        }
-        if (updateDto.getSchoolId() != null && !updateDto.getSchoolId().equals(teacher.getSchool().getId())) {
-            School newSchool = schoolRepository.findById(updateDto.getSchoolId())
-                    .orElseThrow(() -> new ResourceNotFoundException("School not found with ID: " + updateDto.getSchoolId()));
-            teacher.setSchool(newSchool);
-        }
+
+        validateEmailChange(id, updateDto, teacher);
+        applySchoolChange(updateDto, teacher);
+
         teacherMapper.updateEntityFromDto(updateDto, teacher);
 
         if (updateDto.getSubjectIds() != null) {
@@ -283,20 +315,49 @@ public class TeacherService implements CrudService<TeacherResponseDto, Long> {
         return teacherMapper.toResponseDto(updated);
     }
 
+    /**
+     * Validates that an email change does not violate uniqueness constraints.
+     */
+    private void validateEmailChange(Long id, TeacherUpdateDto updateDto, Teacher teacher) {
+        String incomingEmail = updateDto.getEmail();
+        if (incomingEmail == null || incomingEmail.equals(teacher.getEmail())) {
+            return;
+        }
+        if (teacherRepository.existsByEmailAndIdNot(incomingEmail, id)) {
+            throw new DuplicateResourceException("Email already exists: " + incomingEmail);
+        }
+    }
+
+    /**
+     * Applies school change if schoolId is provided and differs from current.
+     */
+    private void applySchoolChange(TeacherUpdateDto updateDto, Teacher teacher) {
+        Long incomingSchoolId = updateDto.getSchoolId();
+        if (incomingSchoolId == null) {
+            return;
+        }
+        if (teacher.getSchool() != null && incomingSchoolId.equals(teacher.getSchool().getId())) {
+            return;
+        }
+
+        School newSchool = schoolRepository.findById(incomingSchoolId)
+                .orElseThrow(() -> new ResourceNotFoundException("School not found with ID: " + incomingSchoolId));
+        teacher.setSchool(newSchool);
+    }
+
+    /**
+     * Updates a teacher's employment status.
+     *
+     * @param id               teacher ID
+     * @param employmentStatus new status
+     * @return updated teacher response DTO
+     */
     @Audited(
             action = AuditLog.AuditAction.UPDATE,
             entityName = AuditEntityNames.TEACHER,
             description = "Updated teacher employment status",
             captureNewValue = true
     )
-    @Transactional
-    /**
-     * Updates a teacher's employment status.
-     * 
-     * @param id the teacher ID
-     * @param employmentStatus the new employment status
-     * @return updated teacher response DTO
-     */
     public TeacherResponseDto updateEmploymentStatus(Long id, Teacher.EmploymentStatus employmentStatus) {
         Teacher existing = teacherRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Teacher not found with ID: " + id));
@@ -305,13 +366,15 @@ public class TeacherService implements CrudService<TeacherResponseDto, Long> {
         return teacherMapper.toResponseDto(updated);
     }
 
+    /**
+     * Deletes a teacher by id.
+     */
     @Audited(
             action = AuditLog.AuditAction.DELETE,
             entityName = AuditEntityNames.TEACHER,
             description = "Deleted teacher",
             captureNewValue = false
     )
-    @Transactional
     @Override
     public void delete(Long id) {
         if (!teacherRepository.existsById(id)) {
@@ -321,21 +384,26 @@ public class TeacherService implements CrudService<TeacherResponseDto, Long> {
     }
 
     /**
-     * Deletes a teacher by ID.
-     * 
-     * @param id the teacher ID
+     * Deletes a teacher by ID (kept for API compatibility).
+     * <p>
+     * Important: This method does not call {@link #delete(Long)} to avoid
+     * transactional self-invocation warnings.
+     *
+     * @param id teacher ID
      */
-    @Transactional
     public void deleteTeacher(Long id) {
-        delete(id);
+        if (!teacherRepository.existsById(id)) {
+            throw new ResourceNotFoundException("Teacher not found with id: " + id);
+        }
+        teacherRepository.deleteById(id);
     }
 
     /**
-     * Find existing emails in the database from a list of emails.
+     * Finds existing emails from a list of emails.
      * Used for bulk import validation.
      *
-     * @param emails List of email addresses to check
-     * @return Set of emails that already exist in the database
+     * @param emails list of email addresses
+     * @return set of emails already existing in the DB
      */
     @Transactional(readOnly = true)
     public Set<String> findExistingEmails(List<String> emails) {
@@ -343,169 +411,287 @@ public class TeacherService implements CrudService<TeacherResponseDto, Long> {
             return Set.of();
         }
         Set<String> normalizedEmails = emails.stream()
-                .map(email -> email.toLowerCase().trim())
+                .map(e -> e.toLowerCase().trim())
                 .collect(Collectors.toSet());
         return teacherRepository.findExistingEmails(normalizedEmails);
     }
 
+    /**
+     * Imports teachers from an Excel file.
+     *
+     * @param file            the Excel file
+     * @param skipInvalidRows whether to skip invalid rows or stop on first error
+     * @return import response containing per-row results
+     * @throws IOException if parsing fails
+     */
     @Audited(
             action = AuditLog.AuditAction.IMPORT,
             entityName = AuditEntityNames.TEACHER,
             description = "Bulk imported teachers",
             captureNewValue = false
     )
-    @Transactional
-    /**
-     * Imports teachers from an Excel file.
-     * 
-     * @param file the Excel file containing teacher data
-     * @param skipInvalidRows whether to skip invalid rows or fail on first error
-     * @return bulk import response with success and error details
-     * @throws IOException if file reading fails
-     */
     public BulkImportResponseDto bulkImportTeachers(MultipartFile file, boolean skipInvalidRows) throws IOException {
         List<ParsedRow> parsedRows = ExcelParser.parseExcelFile(file);
-        List<ImportResultRowDto> results = new ArrayList<>();
-        
-        // Batch processing: Load all schools once
-        List<School> allSchools = schoolRepository.findByIsActive(true);
-        Map<String, School> schoolNameMap = allSchools.stream()
-                .collect(Collectors.toMap(
-                        school -> school.getSchoolName().toLowerCase(),
-                        school -> school,
-                        (existing, replacement) -> existing
-                ));
-        Map<Long, School> schoolIdMap = allSchools.stream()
-                .collect(Collectors.toMap(School::getId, school -> school));
 
-        // Batch check existing emails
-        Set<String> emailsToCheck = parsedRows.stream()
-                .map(row -> row.getDto().getEmail().toLowerCase().trim())
-                .collect(Collectors.toSet());
-        Set<String> existingEmails = teacherRepository.findExistingEmails(emailsToCheck);
+        Map<Integer, ImportResultRowDto> resultMap = initResultMap(parsedRows);
+        List<School> activeSchools = schoolRepository.findByIsActive(true);
 
-        // Prepare valid rows for batch insert
+        Map<String, School> schoolByName = indexByLowerName(activeSchools);
+        Map<Long, School> schoolById = activeSchools.stream()
+                .collect(Collectors.toMap(School::getId, Function.identity()));
+
+        Set<String> existingEmails = loadExistingEmails(parsedRows);
         List<TeacherRowPair> validRows = new ArrayList<>();
-        Map<Integer, ImportResultRowDto> resultMap = new HashMap<>();
 
-        // Process each row and validate
-        for (ParsedRow parsedRow : parsedRows) {
+        boolean prepared = validateAndPrepareRows(
+                parsedRows, resultMap, validRows, existingEmails, schoolById, schoolByName, skipInvalidRows
+        );
+
+        int successful = 0;
+        if (prepared || skipInvalidRows) {
+            successful = saveBatches(validRows, resultMap, 50);
+        }
+
+        List<ImportResultRowDto> results = parsedRows.stream()
+                .map(r -> resultMap.get(r.getRowNumber()))
+                .toList();
+
+        int total = parsedRows.size();
+        int failed = total - successful;
+
+        return BulkImportResponseDto.builder()
+                .totalRows(total)
+                .successfulRows(successful)
+                .failedRows(failed)
+                .results(results)
+                .build();
+    }
+
+    /**
+     * Initializes the result map with a default failed result for each row.
+     */
+    private Map<Integer, ImportResultRowDto> initResultMap(List<ParsedRow> parsedRows) {
+        Map<Integer, ImportResultRowDto> resultMap = new HashMap<>();
+        for (ParsedRow row : parsedRows) {
             ImportResultRowDto result = ImportResultRowDto.builder()
-                    .rowNumber(parsedRow.getRowNumber())
+                    .rowNumber(row.getRowNumber())
                     .success(false)
                     .build();
-            resultMap.put(parsedRow.getRowNumber(), result);
+            resultMap.put(row.getRowNumber(), result);
+        }
+        return resultMap;
+    }
+
+    /**
+     * Creates an index of active schools by lower-cased school name.
+     */
+    private Map<String, School> indexByLowerName(List<School> schools) {
+        return schools.stream().collect(Collectors.toMap(
+                s -> s.getSchoolName().toLowerCase(),
+                Function.identity(),
+                (a, b) -> a
+        ));
+    }
+
+    /**
+     * Loads emails from rows and asks repository for existing ones.
+     */
+    private Set<String> loadExistingEmails(List<ParsedRow> parsedRows) {
+        Set<String> emailsToCheck = parsedRows.stream()
+                .map(r -> r.getDto().getEmail().toLowerCase().trim())
+                .collect(Collectors.toSet());
+        return teacherRepository.findExistingEmails(emailsToCheck);
+    }
+
+    /**
+     * Validates each row and prepares Teacher entities for batch save.
+     * Handles skip/stop behavior based on skipInvalidRows.
+     *
+     * @return true if processed fully; false if stopped early due to error (and skipInvalidRows=false)
+     */
+    private boolean validateAndPrepareRows(
+            List<ParsedRow> parsedRows,
+            Map<Integer, ImportResultRowDto> resultMap,
+            List<TeacherRowPair> validRows,
+            Set<String> existingEmails,
+            Map<Long, School> schoolById,
+            Map<String, School> schoolByName,
+            boolean skipInvalidRows
+    ) {
+        for (int idx = 0; idx < parsedRows.size(); idx++) {
+            ParsedRow parsedRow = parsedRows.get(idx);
+            ImportResultRowDto result = resultMap.get(parsedRow.getRowNumber());
 
             try {
-                TeacherCreateDto dto = parsedRow.getDto();
-                String emailLower = dto.getEmail().toLowerCase().trim();
-
-                // Check for duplicate email in database
-                if (existingEmails.contains(emailLower)) {
-                    throw new DuplicateResourceException("Email already exists: " + dto.getEmail());
-                }
-
-                // Resolve school ID from name if needed
-                School school = null;
-                if (dto.getSchoolId() != null) {
-                    school = schoolIdMap.get(dto.getSchoolId());
-                    if (school == null) {
-                        throw new ResourceNotFoundException("School not found with ID: " + dto.getSchoolId());
-                    }
-                } else if (parsedRow.getSchoolName() != null && !parsedRow.getSchoolName().trim().isEmpty()) {
-                    school = schoolNameMap.get(parsedRow.getSchoolName().toLowerCase().trim());
-                    if (school == null) {
-                        throw new ResourceNotFoundException("School not found with name: " + parsedRow.getSchoolName());
-                    }
-                    dto.setSchoolId(school.getId());
-                } else {
-                    throw new ResourceNotFoundException("School ID or School Name is required");
-                }
-
-                // Create teacher entity (not saved yet)
-                Teacher teacher = teacherMapper.toEntityCreate(dto);
-                teacher.setSchool(school);
+                Teacher teacher = buildTeacherForRow(parsedRow, existingEmails, schoolById, schoolByName);
                 validRows.add(new TeacherRowPair(teacher, parsedRow.getRowNumber()));
-                
-                // Mark as valid for now (will be set to success after save)
                 result.setSuccess(true);
-
-            } catch (Exception e) {
-                String errorMessage = e.getMessage();
-                if (errorMessage == null || errorMessage.isEmpty()) {
-                    errorMessage = "Failed to import teacher: " + e.getClass().getSimpleName();
-                }
-                result.setError(errorMessage);
-                log.warn("Failed to import teacher at row {}: {}", parsedRow.getRowNumber(), errorMessage);
-
-                // If skipInvalidRows is false, stop processing on first error
+            } catch (DuplicateResourceException | ResourceNotFoundException | IllegalArgumentException e) {
+                setRowError(parsedRow, result, e);
                 if (!skipInvalidRows) {
-                    // Clear valid rows and mark remaining as failed
+                    markRemainingAsStopped(parsedRows, resultMap, idx, parsedRow.getRowNumber());
                     validRows.clear();
-                    // Set all remaining rows as failed
-                    int currentIndex = parsedRows.indexOf(parsedRow);
-                    for (int i = currentIndex + 1; i < parsedRows.size(); i++) {
-                        ParsedRow remainingRow = parsedRows.get(i);
-                        ImportResultRowDto remainingResult = resultMap.get(remainingRow.getRowNumber());
-                        if (remainingResult != null && remainingResult.getError() == null) {
-                            remainingResult.setError("Import stopped due to error in row " + parsedRow.getRowNumber());
-                        }
-                    }
-                    break;
+                    return false;
+                }
+            } catch (RuntimeException e) {
+                setRowError(parsedRow, result, e);
+                if (!skipInvalidRows) {
+                    markRemainingAsStopped(parsedRows, resultMap, idx, parsedRow.getRowNumber());
+                    validRows.clear();
+                    return false;
                 }
             }
         }
+        return true;
+    }
 
-        // Batch save valid teachers in smaller transactions (batch size: 50)
-        int batchSize = 50;
+    /**
+     * Builds a Teacher entity for a parsed row, performing the same validations as before.
+     */
+    private Teacher buildTeacherForRow(
+            ParsedRow parsedRow,
+            Set<String> existingEmails,
+            Map<Long, School> schoolById,
+            Map<String, School> schoolByName
+    ) {
+        TeacherCreateDto dto = parsedRow.getDto();
+        String emailLower = dto.getEmail().toLowerCase().trim();
+
+        if (existingEmails.contains(emailLower)) {
+            throw new DuplicateResourceException("Email already exists: " + dto.getEmail());
+        }
+
+        School school = resolveSchool(parsedRow, dto, schoolById, schoolByName);
+        Teacher teacher = teacherMapper.toEntityCreate(dto);
+        teacher.setSchool(school);
+        return teacher;
+    }
+
+    /**
+     * Resolves the school for a row using either:
+     * <ul>
+     *   <li>dto.schoolId (preferred)</li>
+     *   <li>parsedRow.schoolName (fallback)</li>
+     * </ul>
+     */
+    private School resolveSchool(
+            ParsedRow parsedRow,
+            TeacherCreateDto dto,
+            Map<Long, School> schoolById,
+            Map<String, School> schoolByName
+    ) {
+        if (dto.getSchoolId() != null) {
+            School byId = schoolById.get(dto.getSchoolId());
+            if (byId == null) {
+                throw new ResourceNotFoundException("School not found with ID: " + dto.getSchoolId());
+            }
+            return byId;
+        }
+
+        String schoolName = parsedRow.getSchoolName();
+        if (schoolName != null && !schoolName.trim().isEmpty()) {
+            School byName = schoolByName.get(schoolName.toLowerCase().trim());
+            if (byName == null) {
+                throw new ResourceNotFoundException("School not found with name: " + schoolName);
+            }
+            dto.setSchoolId(byName.getId());
+            return byName;
+        }
+
+        throw new ResourceNotFoundException("School ID or School Name is required");
+    }
+
+    /**
+     * Populates an error message for a failing import row.
+     */
+    private void setRowError(ParsedRow parsedRow, ImportResultRowDto result, Exception e) {
+        String msg = e.getMessage();
+        if (msg == null || msg.isEmpty()) {
+            msg = "Failed to import teacher: " + e.getClass().getSimpleName();
+        }
+        result.setSuccess(false);
+        result.setError(msg);
+        log.warn("Failed to import teacher at row {}: {}", parsedRow.getRowNumber(), msg);
+    }
+
+    /**
+     * Marks remaining rows after a stopping error.
+     */
+    private void markRemainingAsStopped(
+            List<ParsedRow> parsedRows,
+            Map<Integer, ImportResultRowDto> resultMap,
+            int currentIndex,
+            int errorRowNumber
+    ) {
+        for (int i = currentIndex + 1; i < parsedRows.size(); i++) {
+            ParsedRow remainingRow = parsedRows.get(i);
+            ImportResultRowDto remainingResult = resultMap.get(remainingRow.getRowNumber());
+            if (remainingResult != null && remainingResult.getError() == null) {
+                remainingResult.setError("Import stopped due to error in row " + errorRowNumber);
+            }
+        }
+    }
+
+    /**
+     * Saves teachers in batches and attaches saved entities to per-row results.
+     *
+     * @return number of successfully saved rows
+     */
+    private int saveBatches(List<TeacherRowPair> validRows, Map<Integer, ImportResultRowDto> resultMap, int batchSize) {
         int successfulRows = 0;
-        
+
         for (int i = 0; i < validRows.size(); i += batchSize) {
             int end = Math.min(i + batchSize, validRows.size());
             List<TeacherRowPair> batch = validRows.subList(i, end);
+
             List<Teacher> teachersToSave = batch.stream()
-                    .map(pair -> pair.teacher)
-                    .collect(Collectors.toList());
-            
+                    .map(TeacherRowPair::getTeacher)
+                    .toList();
+
             try {
                 List<Teacher> savedTeachers = teacherRepository.saveAll(teachersToSave);
-                
-                // Update results for successfully saved teachers
-                for (int j = 0; j < savedTeachers.size(); j++) {
-                    Teacher saved = savedTeachers.get(j);
-                    int rowNumber = batch.get(j).rowNumber;
-                    ImportResultRowDto result = resultMap.get(rowNumber);
-                    if (result != null && result.isSuccess()) {
-                        TeacherResponseDto responseDto = teacherMapper.toResponseDto(saved);
-                        result.setTeacher(responseDto);
-                        successfulRows++;
-                    }
-                }
-            } catch (Exception e) {
+                successfulRows += attachSavedTeachers(savedTeachers, batch, resultMap);
+            } catch (RuntimeException e) {
                 log.error("Error saving batch of teachers", e);
-                // Mark batch as failed
-                for (TeacherRowPair pair : batch) {
-                    ImportResultRowDto result = resultMap.get(pair.rowNumber);
-                    if (result != null && result.isSuccess()) {
-                        result.setSuccess(false);
-                        result.setError("Failed to save teacher: " + e.getMessage());
-                    }
-                }
+                markBatchFailed(batch, resultMap, e);
             }
         }
 
-        // Build final results list
-        for (ParsedRow parsedRow : parsedRows) {
-            results.add(resultMap.get(parsedRow.getRowNumber()));
+        return successfulRows;
+    }
+
+    /**
+     * Attaches saved teachers to the corresponding row results.
+     */
+    private int attachSavedTeachers(
+            List<Teacher> savedTeachers,
+            List<TeacherRowPair> batch,
+            Map<Integer, ImportResultRowDto> resultMap
+    ) {
+        int successes = 0;
+        for (int j = 0; j < savedTeachers.size(); j++) {
+            Teacher saved = savedTeachers.get(j);
+            int rowNumber = batch.get(j).getRowNumber();
+            ImportResultRowDto result = resultMap.get(rowNumber);
+            if (result != null && result.isSuccess()) {
+                result.setTeacher(teacherMapper.toResponseDto(saved));
+                successes++;
+            }
         }
+        return successes;
+    }
 
-        int failedRows = parsedRows.size() - successfulRows;
-
-        return BulkImportResponseDto.builder()
-                .totalRows(parsedRows.size())
-                .successfulRows(successfulRows)
-                .failedRows(failedRows)
-                .results(results)
-                .build();
+    /**
+     * Marks all rows in a batch as failed when the batch save fails.
+     */
+    private void markBatchFailed(List<TeacherRowPair> batch, Map<Integer, ImportResultRowDto> resultMap, RuntimeException e) {
+        String msg = e.getMessage();
+        for (TeacherRowPair pair : batch) {
+            ImportResultRowDto result = resultMap.get(pair.getRowNumber());
+            if (result != null && result.isSuccess()) {
+                result.setSuccess(false);
+                result.setError("Failed to save teacher: " + msg);
+            }
+        }
     }
 }
